chore: production audit Cycles 1-6 complete — all deferred items resolved